day link bai tap

--- a/Hoccss/css/ex01.css
+++ b/Hoccss/css/ex01.css
@@ -41,3 +41,7 @@
     .menu  ul a {
         color:green;
     }
+
+    .todos input:checked ~ span {
+        text-decoration: line-through;
+    }
